[package]
name = "tuilog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adif = "0.1.3"
anyhow = "1.0.77"
chrono = "0.4.31"
cursive = "0.20.0"
cursive-aligned-view = "0.6.0"
cursive_table_view = "0.14.0"
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["chrono"] }
